# quotation-tool

./: .gitignore  Article1.xlsx  CITATION.cff  README.md  binder_poetry_to_requirements.sh  config.py  environment-readable.yml  environment.yml  extract_display_quotes.py  jupyter.sh  logging_conf.ini  metadata.yml  postBuild  post_aggregate.ipynb  pyproject.toml  quote_extractor.diff  quote_extractor_notebook.ipynb  requirements.txt  semantic_tagger_en.ipynb  semantic_tagger_en.py
.ipynb_checkpoints/: quote_extractor_notebook-checkpoint.ipynb
.jupyter/: jupyter_notebook_config.py
GenderGapTracker/nlp/english/: entity_gender_annotator.py  quote_extractor.py
GenderGapTracker/nlp/english/rules/: quote_verb_list.txt
documents/: USASSemanticTagset.docx  sample_texts.xlsx  semtags_subcategories.txt
juxtorpus/: __init__.py  constants.py  jux.py  loader.py
juxtorpus/checks/: __init__.py
juxtorpus/corpus/: __init__.py  app.py  builder.py  corpus.py  dtm.py  freqtable.py  slicer.py
juxtorpus/corpus/meta/: __init__.py  base.py  series.py  spacy_doc.py
juxtorpus/corpus/processors/: __init__.py  spacy_processor.py
juxtorpus/corpus/processors/components/: __init__.py  countries.py  hashtags.py  mentions.py  sentiment.py
juxtorpus/features/: __init__.py  concordance.py  keywords.py  polarity.py  similarity.py  zipf.py
juxtorpus/matchers/: __init__.py
juxtorpus/stats/: __init__.py  loglikelihood_effectsize.py  stats.py
juxtorpus/utils/: __init__.py  deduplicated_dir.py  utils_pandas.py
juxtorpus/viz/: __init__.py  polarity_bar.py  polarity_wordcloud.py  vocab_timeline.py
juxtorpus/viz/widgets/: __init__.py  file_uploader.py
notebooks/: concordance.ipynb  mvp.ipynb  processing.ipynb  tweets.ipynb
notebooks/.ipynb_checkpoints/: concordance-checkpoint.ipynb  fileupload-checkpoint.ipynb  mvp-checkpoint.ipynb
notebooks/demos/: corpus.ipynb  fileupload.ipynb  quotation_integration.ipynb  widgets.ipynb
notebooks/demos/.ipynb_checkpoints/: quotation_integration-checkpoint.ipynb  widgets-checkpoint.ipynb
output/: quotes.xlsx  text9.html
quotation_tool/: __init__.py  config.py  extract_display_quotes.py  quote_extractor.py
quotation_tool/gender_gap_tracker/: quote_extractor.py
